--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,58 +1,72 @@
 # 2024-04-06
 
-共 249 条
+共 260 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 18:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 19:00:47 GMT+0800 (China Standard Time) -->
 1. [美国以色列高度戒备：伊朗或发动袭击](https://so.toutiao.com/search?keyword=美国以色列高度戒备：伊朗或发动袭击)
 1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
 1. [今年春播粮食意向面积超9.5亿亩](https://so.toutiao.com/search?keyword=今年春播粮食意向面积超9.5亿亩)
+1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
 1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
-1. [监控显示陕西失联13岁女孩曾在奔跑](https://so.toutiao.com/search?keyword=监控显示陕西失联13岁女孩曾在奔跑)
-1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
-1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
-1. [女子被卷入扶梯 家属称有截肢风险](https://so.toutiao.com/search?keyword=女子被卷入扶梯+家属称有截肢风险)
 1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
-1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
-1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
-1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
+1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
+1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
 1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
-1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
-1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
-1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
+1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
+1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
 1. [马英九率台青参观西安兵马俑博物馆](https://so.toutiao.com/search?keyword=马英九率台青参观西安兵马俑博物馆)
-1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
-1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
-1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
-1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
-1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
-1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
-1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
-1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
-1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
-1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
+1. [女子被卷入扶梯 家属称有截肢风险](https://so.toutiao.com/search?keyword=女子被卷入扶梯+家属称有截肢风险)
+1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
+1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
 1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
-1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
+1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
+1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
+1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
+1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
+1. [云南昭通4.9级地震 山石崩落砸中小车](https://so.toutiao.com/search?keyword=云南昭通4.9级地震+山石崩落砸中小车)
+1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
+1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
+1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [张亚中谈赖清德上任后两岸关系走势](https://so.toutiao.com/search?keyword=张亚中谈赖清德上任后两岸关系走势)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
 1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
+1. [警方回应女子举报前夫殴打女儿](https://so.toutiao.com/search?keyword=警方回应女子举报前夫殴打女儿)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
+1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
+1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
+1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
+1. [6车连撞 车主排排站等待交警处理](https://so.toutiao.com/search?keyword=6车连撞+车主排排站等待交警处理)
+1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
+1. [男子回应被前妻取证打女儿称不属实](https://so.toutiao.com/search?keyword=男子回应被前妻取证打女儿称不属实)
+1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
+1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
+1. [一组数据看游客清明假期去哪玩](https://so.toutiao.com/search?keyword=一组数据看游客清明假期去哪玩)
+1. [两列高铁行驶中突然靠近压迫感拉满](https://so.toutiao.com/search?keyword=两列高铁行驶中突然靠近压迫感拉满)
+1. [黄健翔：武磊的进球可以移植到国足](https://so.toutiao.com/search?keyword=黄健翔：武磊的进球可以移植到国足)
+1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
+1. [《与凤行》杀我别用父母爱情刀](https://so.toutiao.com/search?keyword=《与凤行》杀我别用父母爱情刀)
+1. [监控显示陕西失联13岁女孩曾在奔跑](https://so.toutiao.com/search?keyword=监控显示陕西失联13岁女孩曾在奔跑)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
 1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
 1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
 1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
 1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
 1. [记者：太阳的上限一直在](https://so.toutiao.com/search?keyword=记者：太阳的上限一直在)
-1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
 1. [清明假期武汉有多火](https://so.toutiao.com/search?keyword=清明假期武汉有多火)
-1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
 1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
 1. [广州雷雨大风冰雹齐至](https://so.toutiao.com/search?keyword=广州雷雨大风冰雹齐至)
 1. [女子雨天爬山时扶树触电晕倒被送医](https://so.toutiao.com/search?keyword=女子雨天爬山时扶树触电晕倒被送医)
 1. [被查校长打牌一晚输赢七八万](https://so.toutiao.com/search?keyword=被查校长打牌一晚输赢七八万)
 1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
-1. [一组数据看游客清明假期去哪玩](https://so.toutiao.com/search?keyword=一组数据看游客清明假期去哪玩)
 1. [松花江干流哈尔滨段开江](https://so.toutiao.com/search?keyword=松花江干流哈尔滨段开江)
 1. [伊朗发布威胁报复以色列宣传片](https://so.toutiao.com/search?keyword=伊朗发布威胁报复以色列宣传片)
 1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
@@ -61,10 +75,8 @@
 1. [邓超说孙俪可以练古筝](https://so.toutiao.com/search?keyword=邓超说孙俪可以练古筝)
 1. [鹈鹕仅领先国王和湖人1个胜场](https://so.toutiao.com/search?keyword=鹈鹕仅领先国王和湖人1个胜场)
 1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
-1. [警方回应女子举报前夫殴打女儿](https://so.toutiao.com/search?keyword=警方回应女子举报前夫殴打女儿)
 1. [国王战绩被湖人追平](https://so.toutiao.com/search?keyword=国王战绩被湖人追平)
 1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
-1. [男子回应被前妻取证打女儿称不属实](https://so.toutiao.com/search?keyword=男子回应被前妻取证打女儿称不属实)
 1. [媒体人：国安进攻仍有很多不足](https://so.toutiao.com/search?keyword=媒体人：国安进攻仍有很多不足)
 1. [墨西哥与厄瓜多尔断绝外交关系](https://so.toutiao.com/search?keyword=墨西哥与厄瓜多尔断绝外交关系)
 1. [云南一工地挖出二战遗留航空炸弹](https://so.toutiao.com/search?keyword=云南一工地挖出二战遗留航空炸弹)
@@ -116,7 +128,6 @@
 1. [控血糖的3个误区](https://so.toutiao.com/search?keyword=控血糖的3个误区)
 1. [两车相撞老人夹在中间竟安然无事](https://so.toutiao.com/search?keyword=两车相撞老人夹在中间竟安然无事)
 1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
-1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
 1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
 1. [杨瀚森今年不参加NBA选秀](https://so.toutiao.com/search?keyword=杨瀚森今年不参加NBA选秀)
 1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
