--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,51 +1,67 @@
 # 2024-04-06
 
-共 260 条
+共 273 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 19:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 20:00:38 GMT+0800 (China Standard Time) -->
 1. [美国以色列高度戒备：伊朗或发动袭击](https://so.toutiao.com/search?keyword=美国以色列高度戒备：伊朗或发动袭击)
-1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
+1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
 1. [今年春播粮食意向面积超9.5亿亩](https://so.toutiao.com/search?keyword=今年春播粮食意向面积超9.5亿亩)
 1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
+1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
+1. [亲历纽约地震的华人：一天都觉得晕](https://so.toutiao.com/search?keyword=亲历纽约地震的华人：一天都觉得晕)
 1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
-1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
+1. [塔吉克斯坦总统拉赫蒙会见王小洪](https://so.toutiao.com/search?keyword=塔吉克斯坦总统拉赫蒙会见王小洪)
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
-1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
-1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
-1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
-1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
+1. [戴军瞿颖分享冻龄秘诀](https://so.toutiao.com/search?keyword=戴军瞿颖分享冻龄秘诀)
 1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
 1. [马英九率台青参观西安兵马俑博物馆](https://so.toutiao.com/search?keyword=马英九率台青参观西安兵马俑博物馆)
+1. [艾克森后场拉球转身失误造成失球](https://so.toutiao.com/search?keyword=艾克森后场拉球转身失误造成失球)
+1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
+1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
 1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
-1. [女子被卷入扶梯 家属称有截肢风险](https://so.toutiao.com/search?keyword=女子被卷入扶梯+家属称有截肢风险)
+1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
+1. [大爷锻炼玩弹弓射穿对楼玻璃被抓](https://so.toutiao.com/search?keyword=大爷锻炼玩弹弓射穿对楼玻璃被抓)
+1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
+1. [俄军俘获乌“革命性武器”](https://so.toutiao.com/search?keyword=俄军俘获乌“革命性武器”)
+1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
+1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
 1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
-1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
-1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
 1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
-1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
+1. [品牌饮料上架香菜汁且购买送呕吐袋](https://so.toutiao.com/search?keyword=品牌饮料上架香菜汁且购买送呕吐袋)
+1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
+1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
+1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
+1. [罗慕洛时隔308天重返中超](https://so.toutiao.com/search?keyword=罗慕洛时隔308天重返中超)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
+1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
+1. [云南昭通4.9级地震 山石崩落砸中小车](https://so.toutiao.com/search?keyword=云南昭通4.9级地震+山石崩落砸中小车)
 1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
 1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
-1. [云南昭通4.9级地震 山石崩落砸中小车](https://so.toutiao.com/search?keyword=云南昭通4.9级地震+山石崩落砸中小车)
-1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
-1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
+1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
+1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
+1. [天水多个区县住宿率接近100%](https://so.toutiao.com/search?keyword=天水多个区县住宿率接近100%)
+1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
+1. [哈萨克斯坦遭遇80年以来最严重洪灾](https://so.toutiao.com/search?keyword=哈萨克斯坦遭遇80年以来最严重洪灾)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
+1. [女子脚踝受伤半年 医生“秒接回”](https://so.toutiao.com/search?keyword=女子脚踝受伤半年+医生“秒接回”)
+1. [女子被卷入扶梯 家属称有截肢风险](https://so.toutiao.com/search?keyword=女子被卷入扶梯+家属称有截肢风险)
 1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
 1. [张亚中谈赖清德上任后两岸关系走势](https://so.toutiao.com/search?keyword=张亚中谈赖清德上任后两岸关系走势)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
-1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
 1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
 1. [警方回应女子举报前夫殴打女儿](https://so.toutiao.com/search?keyword=警方回应女子举报前夫殴打女儿)
-1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
 1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
-1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
-1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
 1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
-1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
 1. [6车连撞 车主排排站等待交警处理](https://so.toutiao.com/search?keyword=6车连撞+车主排排站等待交警处理)
-1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
 1. [男子回应被前妻取证打女儿称不属实](https://so.toutiao.com/search?keyword=男子回应被前妻取证打女儿称不属实)
 1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
 1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
@@ -58,7 +74,6 @@
 1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
 1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
 1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
-1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
 1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
 1. [记者：太阳的上限一直在](https://so.toutiao.com/search?keyword=记者：太阳的上限一直在)
 1. [清明假期武汉有多火](https://so.toutiao.com/search?keyword=清明假期武汉有多火)
@@ -94,7 +109,6 @@
 1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
 1. [耳背爷爷在睡觉男子怎么也叫不开门](https://so.toutiao.com/search?keyword=耳背爷爷在睡觉男子怎么也叫不开门)
 1. [拜登被问会否放弃以色列后反问记者](https://so.toutiao.com/search?keyword=拜登被问会否放弃以色列后反问记者)
-1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
 1. [《与凤行》父母爱情来了](https://so.toutiao.com/search?keyword=《与凤行》父母爱情来了)
 1. [云南鲁甸地震当地人称震感强吊灯晃](https://so.toutiao.com/search?keyword=云南鲁甸地震当地人称震感强吊灯晃)
 1. [南部战区导弹艇模拟打击袭扰渔船](https://so.toutiao.com/search?keyword=南部战区导弹艇模拟打击袭扰渔船)
@@ -170,7 +184,6 @@
 1. [柯基警官福仔遭宠物狗袭击](https://so.toutiao.com/search?keyword=柯基警官福仔遭宠物狗袭击)
 1. [布朗尼宣布参加2024年选秀](https://so.toutiao.com/search?keyword=布朗尼宣布参加2024年选秀)
 1. [无人机在俄境内坠落弹药爆炸致8伤](https://so.toutiao.com/search?keyword=无人机在俄境内坠落弹药爆炸致8伤)
-1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
 1. [湖南一村书记被村民捅死？警方回应](https://so.toutiao.com/search?keyword=湖南一村书记被村民捅死？警方回应)
 1. [外媒：美菲日澳将在南海联合演习](https://so.toutiao.com/search?keyword=外媒：美菲日澳将在南海联合演习)
 1. [网友路遇歼20低空飞过压迫感十足](https://so.toutiao.com/search?keyword=网友路遇歼20低空飞过压迫感十足)
