--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,51 +1,65 @@
 # 2024-04-06
 
-共 281 条
+共 291 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 21:00:51 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 22:00:37 GMT+0800 (China Standard Time) -->
 1. [美国以色列高度戒备：伊朗或发动袭击](https://so.toutiao.com/search?keyword=美国以色列高度戒备：伊朗或发动袭击)
 1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
 1. [今年春播粮食意向面积超9.5亿亩](https://so.toutiao.com/search?keyword=今年春播粮食意向面积超9.5亿亩)
-1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
-1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
-1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
-1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
 1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
+1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
+1. [以色列承认“犯严重错误” 白宫回应](https://so.toutiao.com/search?keyword=以色列承认“犯严重错误”+白宫回应)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
 1. [塔吉克斯坦总统拉赫蒙会见王小洪](https://so.toutiao.com/search?keyword=塔吉克斯坦总统拉赫蒙会见王小洪)
-1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
-1. [戴军瞿颖分享冻龄秘诀](https://so.toutiao.com/search?keyword=戴军瞿颖分享冻龄秘诀)
+1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
+1. [2024电视剧品质盛典](https://so.toutiao.com/search?keyword=2024电视剧品质盛典)
 1. [88岁硬核爷爷惊艳上海时装周](https://so.toutiao.com/search?keyword=88岁硬核爷爷惊艳上海时装周)
 1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
+1. [雷军称大家用放大镜看SU7压力很大](https://so.toutiao.com/search?keyword=雷军称大家用放大镜看SU7压力很大)
 1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
-1. [俄军俘获乌“革命性武器”](https://so.toutiao.com/search?keyword=俄军俘获乌“革命性武器”)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
-1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
-1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
-1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
+1. [成人也会“中招”百日咳吗](https://so.toutiao.com/search?keyword=成人也会“中招”百日咳吗)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [张核子向母校捐款26万元](https://so.toutiao.com/search?keyword=张核子向母校捐款26万元)
 1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
+1. [《与凤行》获得爆剧认证](https://so.toutiao.com/search?keyword=《与凤行》获得爆剧认证)
 1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
+1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
+1. [专家：马英九率团访陆带来一大启发](https://so.toutiao.com/search?keyword=专家：马英九率团访陆带来一大启发)
+1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
+1. [张爱军不再担任江苏省委常委职务](https://so.toutiao.com/search?keyword=张爱军不再担任江苏省委常委职务)
 1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
-1. [大爷锻炼玩弹弓射穿对楼玻璃被抓](https://so.toutiao.com/search?keyword=大爷锻炼玩弹弓射穿对楼玻璃被抓)
-1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
+1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
+1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
+1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
+1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
 1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
-1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [品牌饮料上架香菜汁且购买送呕吐袋](https://so.toutiao.com/search?keyword=品牌饮料上架香菜汁且购买送呕吐袋)
 1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
 1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
-1. [耶伦：广州在中国经济史上地位独特](https://so.toutiao.com/search?keyword=耶伦：广州在中国经济史上地位独特)
-1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
-1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
-1. [品牌饮料上架香菜汁且购买送呕吐袋](https://so.toutiao.com/search?keyword=品牌饮料上架香菜汁且购买送呕吐袋)
-1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
+1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
+1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [徐亮谈国安开局两胜两平](https://so.toutiao.com/search?keyword=徐亮谈国安开局两胜两平)
+1. [麦当劳今年股价下跌近10%](https://so.toutiao.com/search?keyword=麦当劳今年股价下跌近10%)
 1. [天水多个区县住宿率接近100%](https://so.toutiao.com/search?keyword=天水多个区县住宿率接近100%)
-1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
 1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [俄军俘获乌“革命性武器”](https://so.toutiao.com/search?keyword=俄军俘获乌“革命性武器”)
+1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
+1. [多家中小银行宣布下调存款利率](https://so.toutiao.com/search?keyword=多家中小银行宣布下调存款利率)
+1. [耶伦：广州在中国经济史上地位独特](https://so.toutiao.com/search?keyword=耶伦：广州在中国经济史上地位独特)
+1. [中央气象台发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台发布暴雨蓝色预警)
+1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [戴军瞿颖分享冻龄秘诀](https://so.toutiao.com/search?keyword=戴军瞿颖分享冻龄秘诀)
+1. [大爷锻炼玩弹弓射穿对楼玻璃被抓](https://so.toutiao.com/search?keyword=大爷锻炼玩弹弓射穿对楼玻璃被抓)
+1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
 1. [中国西北古城甘肃天水持续“热辣”](https://so.toutiao.com/search?keyword=中国西北古城甘肃天水持续“热辣”)
 1. [男子因机票退改签险些损失375万](https://so.toutiao.com/search?keyword=男子因机票退改签险些损失375万)
 1. [小米汽车：暂未推出置换优惠政策](https://so.toutiao.com/search?keyword=小米汽车：暂未推出置换优惠政策)
-1. [以色列承认“犯严重错误” 白宫回应](https://so.toutiao.com/search?keyword=以色列承认“犯严重错误”+白宫回应)
-1. [张核子向母校捐款26万元](https://so.toutiao.com/search?keyword=张核子向母校捐款26万元)
 1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
 1. [全新AMG GT63海外到店实拍](https://so.toutiao.com/search?keyword=全新AMG+GT63海外到店实拍)
 1. [6车连撞 车主排排站等待交警处理](https://so.toutiao.com/search?keyword=6车连撞+车主排排站等待交警处理)
@@ -58,11 +72,9 @@
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
 1. [马英九率台青参观西安兵马俑博物馆](https://so.toutiao.com/search?keyword=马英九率台青参观西安兵马俑博物馆)
 1. [艾克森后场拉球转身失误造成失球](https://so.toutiao.com/search?keyword=艾克森后场拉球转身失误造成失球)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
 1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
 1. [罗慕洛时隔308天重返中超](https://so.toutiao.com/search?keyword=罗慕洛时隔308天重返中超)
 1. [云南昭通4.9级地震 山石崩落砸中小车](https://so.toutiao.com/search?keyword=云南昭通4.9级地震+山石崩落砸中小车)
-1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
 1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
 1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
 1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
@@ -74,7 +86,6 @@
 1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
 1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
 1. [男子回应被前妻取证打女儿称不属实](https://so.toutiao.com/search?keyword=男子回应被前妻取证打女儿称不属实)
-1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
 1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
 1. [一组数据看游客清明假期去哪玩](https://so.toutiao.com/search?keyword=一组数据看游客清明假期去哪玩)
 1. [两列高铁行驶中突然靠近压迫感拉满](https://so.toutiao.com/search?keyword=两列高铁行驶中突然靠近压迫感拉满)
@@ -99,7 +110,6 @@
 1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
 1. [邓超说孙俪可以练古筝](https://so.toutiao.com/search?keyword=邓超说孙俪可以练古筝)
 1. [鹈鹕仅领先国王和湖人1个胜场](https://so.toutiao.com/search?keyword=鹈鹕仅领先国王和湖人1个胜场)
-1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
 1. [国王战绩被湖人追平](https://so.toutiao.com/search?keyword=国王战绩被湖人追平)
 1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
 1. [媒体人：国安进攻仍有很多不足](https://so.toutiao.com/search?keyword=媒体人：国安进攻仍有很多不足)
